[package]
name = "alioth-ob"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#substrate dependencies
frame-support = {default-features=false,version="3.0"}
serde = { features = ['derive'],optional=true,version = '1.0.119'}
frame-system={default-features=false,version="3.0"}
sp-runtime={default-features=false,version="3.0"}
sp-io={default-features=false,version="3.0"}
sp-core = {version="3.0",default-features=false}
#serde_json = { version = '1.0.45', default-features = false}
#serde-json-core = {version="0.4.0",default-features=false}
alioth-users={version='0.1.0',default-features=false,path="../alioth-users"}
alioth-class = {version='0.1.0',default-features=false,path='../alioth-class'}
alioth-register = {version='0.1.0',default-features=false,path='../alioth-register'}
parity-scale-codec = { version = "2.0", features = ["derive"], default-features = false }
#getrandom = { version = "0.2",features = ["js"] }
[features]
default=['std']
std=[
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-io/std',
    'sp-core/std',
    #'serde_json/std',
    'serde',
 #   'getrandom/std',
    'parity-scale-codec/std',
    'alioth-users/std',
    'alioth-class/std',
    'alioth-register/std',
    #'serde-json-core/std',
]