[package]
name = "alioth-register"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
[dependencies]
#substrate dependencies
frame-support = {default-features=false,version="3.0"}
frame-system={default-features=false,version="3.0"}
sp-runtime={default-features=false,version="3.0"}
sp-core = {default-features=false,version="3.0"}
serde = { features = ['derive'],optional=true,version = '1.0.119'}
#sp-std={definitions-features=false,version="3.0"}
codec={package="parity-scale-codec",default-features=false,version="2.2.0"}
[features]
default=['std']
std=[
    'serde',
    'frame-support/std',
    'frame-system/std',
    'codec/std',
]