[package]
name = "alioth-users"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-scale-codec = { version = "2.0", features = ["derive"], default-features = false }
#substrate dependencies
frame-support = {default-features=false,version="3.0"}
frame-system={default-features=false,version="3.0"}
sp-runtime={default-features=false,version="3.0"}
sp-io={default-features=false,version="3.0"}
sp-core = {default-features=false,version="3.0"}
serde = { features = ['derive'],optional=true,version = '1.0.119'}

#developer dependencies

alioth-register={default-features=false,version="0.1.0",path="../alioth-register"}

[features]
default=['std']
std=[
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-io/std',
    'sp-core/std',
    'alioth-register/std',
    'parity-scale-codec/std',
    'serde',
]