[package]
name = "register-rpc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
serde = { features = ['derive'], optional = true, version = '1.0.119' }

jsonrpc-core = '15.0.0'
jsonrpc-core-client = '15.0.0'
jsonrpc-derive = '15.0.0'

# Local dependencies
alioth-register={version="0.1.0",default-features=false,path="../../../alioth/alioth-register"}
# Custom Runtime API
alioth-rpc-runtime = { default-features = false, path = 'rpc-runtime'}

# Substrate dependencies
sp-api = { default-features = false, version = '3.0.0' }
sp-blockchain = { default-features = false, version = '3.0.0' }
sp-rpc = { default-features = false, version = '3.0.0' }
sp-core = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
  'serde',
  'sp-runtime/std',
  'sp-api/std',
  'alioth-rpc-runtime/std',
  'alioth-register/std',
]