[package]
name = "alioth-rpc-runtime"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
serde = { features = ['derive'], optional = true, version = '1.0.119' }

# Substrate dependencies
sp-api = { default-features = false,version="3.0.0"}
sp-runtime = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
sp-core={default-features=false,version='3.0.0'}
#dev dependencies`

alioth-register = {default-features=false,version="0.1.0",path="../../../alioth-register"}


[features]
default = ['std']
std = [
	'serde',
	'sp-api/std',
	'sp-std/std',
	'sp-runtime/std',
	'sp-core/std',
  'alioth-register/std',
]
